<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".BankFragment">

            <Button
                android:layout_width="0dp"
                android:id="@+id/searchBankButton"
                android:text="@string/search_bank"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/getBanksButton"
                android:text="@string/get_banks"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="0dp"
                android:id="@+id/getBankButton"
                android:layout_weight="1"
                android:text="@string/get_bank"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/bankTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/result_here" />

    </LinearLayout>
</ScrollView>